# pygroundgl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: Camera.cpp  Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  pybind11_bindings.cpp
lib/platform/: IRendererDevice.h  IWindow.h  SDL2Window.cpp  SDL2Window.h
proj/: Makefile  main.cpp
tests/: create_window.py  test.cpp
tests/res/: basicShader.frag  basicShader.vert
